syntax = "proto3";
package comment;
option go_package = "comment/api/v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service CommentService {
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentReply) {
    option (google.api.http) = {
      post: "/api/comment/create"
      body: "*"
    };
  }

  rpc GetCommentList(GetCommentListRequest) returns (GetCommentListReply) {
    option (google.api.http) = {
      get: "/api/comment/get"
    };
  }
}

// 获取视频评论列表
message GetCommentListRequest {
  string token = 1;
  string refresh_token = 2;
  int64 video_id = 3;
  int64 page = 4;
  int64 page_size = 5;
}

message GetCommentListReply {
  repeated Comment comments = 1;
}

message Comment {
  int64 id = 1;
  int64 user_id = 2;
  int64 video_id = 3;
  int64 parent_id = 4;
  string content = 5;
  google.protobuf.Timestamp created_at = 6;
}




// 创建评论
message CreateCommentRequest {
  int32  action_type = 1;
  int64 parent_id = 2;
  int64 video_id = 3;
  int64 comment_id = 4;
  string token = 5;
  string refresh_token = 6;
  string content = 7;
}

message CreateCommentReply {
  int64 comment_id = 1;
  string msg = 2;
}